--- a/index.html
+++ b/index.html
@@ -1025,10 +1025,7 @@
 
       <section id="contacto" class="contact-cta full-screen-section">
         <div class="container">
-          <h2>
-            ¿Listo para llevar sus vehículos al
-            <strong>Máximo Rendimiento</strong>?
-          </h2>
+          <h2>¿Listo para llevar sus vehículos al Máximo Rendimiento?</h2>
           <p></p>
           <a href="https://pits-app.com" class="cta-main" target="_blank"
             >¡Empieza Ahora!</a
