--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
           <div class="solution-media animate-right-img">
             <video
-              src="./assets/tire-video.mp4"
+              src="./assets/tire-video-1.mp4"
               muted
               playsinline
               loop
